--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -103,6 +103,25 @@ form input:focus {
   width: 300px;
   color: #53e3a6;
 }
+button{
+	-webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  outline: 0;
+  background-color: white;
+  border: 0;
+  padding: 10px 15px;
+  color: #53e3a6;
+  border-radius: 3px;
+  width: 125px;
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
+}
+button:hover {
+  background-color: #f5f7f9;
+}
 form button {
   -webkit-appearance: none;
      -moz-appearance: none;
