--- a/templates/choose.html
+++ b/templates/choose.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login</title>
+<title>Search</title>
 <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 <body>
@@ -12,11 +12,11 @@
 	<div class="wrapper" id="wrapper">
 		<div class="container" id="container">		
 			<form class="form" id="INFO" method="POST" target="nm_iframe" name="INFO">
-				<input type="text" placeholder="Username" name="ID" id="name"/>
-				<input type="password" placeholder="Password" name="PASSWORD"/>
-				<input type="text" placeholder="Checkcode" name="CHECKCODE"/><br><img id="img" src="/CheckCode"/>
-				<input type="hidden">
-				<input type="submit" value="Login"/>
+				<select name="DropDownList1" id="DropDownList1" onchange="Chose(this);">
+				<option value="kcdm">Course Code</option>
+				<option value="kcmc">Course Name</option>
+				<input type="text" name="if"/>
+				<input type="submit" value="Search"/>
 			</form>
 		</div>
 		<ul class="bg-bubbles">
@@ -32,9 +32,6 @@
 			<li></li>
 		</ul>
 	</div>
-	<button class="button" onclick=watch()>watch</button>
-	<button class="button" onclick=choose()>choose</button>
-	<button class="button" onclick=out()>out</button>
 </div>
 <iframe id="id_iframe" name="nm_iframe" style="display:none;"></iframe>
 <script src="static/jquery-3.2.1.min.js"></script>
@@ -44,165 +41,11 @@
 <script src="static/validate/jquery.validate.min.js"></script>
 <script src="static/validate/messages_zh.min.js"></script>
 <script>
-	var ss=0;
-	var id='';
-	function watch(){
-		if (ss)
-			window.open('/info');
-		else
-			{toastr.options.closeButton = true;
-			//toastr.options.timeOut = 1000;
-			toastr.info('please login');}
-	}
-	function out()
-	{
-		if (ss)
-			{
-			toastr.options.closeButton = true;
-			//toastr.options.timeOut = 1000;
-			toastr.info('please login');
-			setTimeout('location.reload();',500);}
-		else
-			{toastr.options.closeButton = true;
-			//toastr.options.timeOut = 1000;
-			toastr.info('please login');}
-	}
-	function choose(){
-		if (ss)
-		{window.open('/check')}
-		else
-			{toastr.options.closeButton = true;
-			//toastr.options.timeOut = 1000;
-			toastr.info('please login');}
-	}
-	$(document).ready(function () {
-        var icon = "<i class='fa fa-times-circle'></i> ";
-        $("#INFO").validate({
-            submitHandler: function(form){
-                //var form = $(this);
-                $(form).ajaxSubmit(function(data){
-                    var return_val = data;
-                    console.log(data);
-                    var suc = return_val.split(";")[0];
-                    var err_msg = return_val.split(";")[1];
-                    if (suc == '1') {
-                        toastr.options.closeButton = true;
-                        //toastr.options.timeOut = 1000;
-                        toastr.success('登录成功!');
-						setTimeout('process('+err_msg+')',500);
-						//alert(id);
-						//id='http://jwbinfosys.zju.edu.cn/xscxbm.aspx?xh='+$('#name').val();
-						//alert(id);
-						ss=1;
-                    } else {
-                        toastr.options.closeButton = true;
-                        //toastr.options.timeOut = 1000;
-                        toastr.error('登录失败! '+ err_msg.split("('")[1].split("')")[0]);
-                }});
-            },
-			rules: {
-                ID: {
-                    required: true,
-                },
-                PASSWORD: {
-                    required: true,
-                },
-				CHECKCODE:{
-					required: true,
-				}
-            },
-            messages: {
-                ID: {
-                    required: icon + "please input your ID"
-                },
-                PASSWORD: {
-                    required: icon + "please input your PASSWORD",
-                },
-				CHECKCODE: {
-                    required: icon + "please input CHECKCODE",
-                }
-            }
-        });
-    });
 	
-	function process(data){
-		s='';
-		t=1;
-		parts=[['思政类','军体类','外语类','计算机类','选修类'],['必修','选修'],['必修','选修','实践教学环节','毕业设计'],'个性'];
-		part=['通识课程','大类课程','专业课程','个性课程'];
-		for(var k in data["curriculum_need"])
-		{
-		part1='<table>'+part[k-1]+'<br>';
-		for(var i in data["curriculum_need"][k])
-		{	
-			if(k=='3' && i=='3')
-			{
-				part1=part1+'<tr>';
-				part1=part1+'<td{white-space: nowrap;}>'+parts[k-1][i-1]+' 必修:</td>'+'<td{white-space: nowrap;}>'+data["curriculum_need"][k][i]['1']["credit_need"]+';</td>';
-				delete data["curriculum_need"][k][i]['1']["credit_need"];
-				temp=data["curriculum_need"][k][i]['1'];
-				for(var j in temp)
-				{
-				part1=part1+'<td{white-space: nowrap;}>'+j+'-</td>'+'<td{white-space: nowrap;}>'+temp[j]+';</td>';
-				}
-				part1=part1+'</tr><br>'
-				part1=part1+'<tr>';
-				part1=part1+'<td{white-space: nowrap;}>'+parts[k-1][i-1]+' 选修:</td>'+'<td{white-space: nowrap;}>'+data["curriculum_need"][k][i]['2']["credit_need"]+';</td>';
-				delete data["curriculum_need"][k][i]['2']["credit_need"];
-				temp=data["curriculum_need"][k][i]['2'];
-				for(var j in temp)
-				{
-				part1=part1+'<td{white-space: nowrap;}>'+j+'-</td>'+'<td{white-space: nowrap;}>'+temp[j]+';</td>';
-				}
-				part1=part1+'</tr><br>'
-			}
-			else if (k=='4')
-			{
-				part1=part1+'<tr>';
-				if (t)
-				{
-				part1=part1+'<td{white-space: nowrap;}>'+parts[k-1]+':</td>'+'<td{white-space: nowrap;}>'+data["curriculum_need"][k]["credit_need"]+';</td>';
-				delete data["curriculum_need"][k][i]["credit_need"];
-				t=0;
-				}
-				<!-- if(i!='credit_need') -->
-				<!-- { -->
-				<!-- temp=data["curriculum_need"][k][i]; -->
-				<!-- part1=part1+'<td>'+i+' -</td>'+'<td>'+temp+'</td>'; -->
-				<!-- } -->
-				part1=part1+'</tr><br>'
-			}
-			else
-			{
-				part1=part1+'<tr>';
-				part1=part1+'<td{white-space: nowrap;}>'+parts[k-1][i-1]+':</td>'+'<td{white-space: nowrap;}>'+data["curriculum_need"][k][i]["credit_need"]+';</td>';
-				delete data["curriculum_need"][k][i]["credit_need"];
-				temp=data["curriculum_need"][k][i];
-				for(var j in temp)
-				{
-				part1=part1+'<td{white-space: nowrap;}>'+j+'-</td>'+'<td{white-space: nowrap;}>'+temp[j]+';</td>';
-				}
-				part1=part1+'</tr><br>'
-			}
-		}
-		s=s+part1+'</table>';
-		}
-		document.getElementById('container').innerHTML='<form class="form">'+s+'</form>';
-		//document.body.onselectstart=document.body.ondrag=function(){return true;}
-		document.getElementById('t').innerText='Credit Needed';
-	}
-	window.onbeforeunload=function(){
-	//必须使用beforeunload
-          $.ajax({
-              url:'/close',
-              async:false                //必须采用同步方法
-          });
-		 
-      }
 </script>
 
 <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';color:#000000">
-<h1 id='t'>Credit System</h1>
+<h1 id='t'>Credit Search</h1>
 </div>
 </body>
 </html>
